# Finance-calculator

./: .gitignore  README.md  data_handler.py  finance_program.ipynb  overview.excalidraw.json
database/: info_db.md
mendicant_lyla_crew/: README.md  pyproject.toml
mendicant_lyla_crew/knowledge/: user_preference.txt
mendicant_lyla_crew/src/mendicant_lyla_crew/: crew.py  main.py
mendicant_lyla_crew/src/mendicant_lyla_crew/config/: agents.yaml  tasks.yaml
mendicant_lyla_crew/tests/: commands.md
modules/: aaa.md  agents.py  data_visualization.py  database_handler.py  finance_engine.py  graph_engine.py
